--- a/homelab/charts/webserver/templates/nginx/deployments/nginx.yml
+++ b/homelab/charts/webserver/templates/nginx/deployments/nginx.yml
@@ -18,15 +18,15 @@ spec:
           image: nginx
           ports:
             - containerPort: 80 
-      #     volumeMounts:
-      #       - name: nginx-conf
-      #         mountPath: /etc/nginx/nginx.conf
-      #         subPath: nginx.conf
-      #         readOnly: true
-      # volumes:
-      #   - name: nginx-conf
-      #     configMap: 
-      #       name: nginx-conf
-      #       items: 
-      #         - key: nginx.conf
-      #           path: nginx.conf 
+          volumeMounts:
+            - name: nginx-conf
+              mountPath: /etc/nginx/nginx.conf
+              subPath: nginx.conf
+              readOnly: true
+      volumes:
+        - name: nginx-conf
+          configMap: 
+            name: nginx-conf
+            items: 
+              - key: nginx.conf
+                path: nginx.conf 
