--- a/homelab/charts/webserver/templates/nginx/services/nginx.yml
+++ b/homelab/charts/webserver/templates/nginx/services/nginx.yml
@@ -5,9 +5,9 @@ metadata:
 spec: 
   type: NodePort
   selector:
-    app.kubernetes.io/name: nginx
+    app: nginx
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
-      nodePort: 30004
+      nodePort: 30000
