Remove redundant files, add common

--- a/charts/webserver/config/nginx/nginx.conf
+++ b/charts/webserver/config/nginx/nginx.conf
@@ -4,15 +4,16 @@ events {
   worker_connections  10240;
 }
 http {
-  # server {
-  #     listen       80;
-  #     server_name  localhost;
-  #     location / {
-  #       root   /usr/share/nginx/html; #Change this line
-  #       index  index.html index.htm;
-  #   }
-  # }
   server {
+      listen       80;
+      server_name  localhost;
+      location / {
+        root   /usr/share/nginx/html; #Change this line
+        index  index.html index.htm;
+    }
+  } 
+  server {
+    server_name scurvy.*;
     listen 80 default_server;
     listen [::]:80 default_server;
     server_name _;
