--- a/charts/common/templates/ldap/svc.yml
+++ b/charts/common/templates/ldap/svc.yml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: ldap
 spec: 
-  type: NodePort
   selector:
-    app: nginx
+    app: ldap
+    app.kubernetes.io/name: ldap
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
-      nodePort: 30000
+      targetPort: 8888
