--- a/charts/webserver/config/nginx/nginx.conf
+++ b/charts/webserver/config/nginx/nginx.conf
@@ -14,9 +14,7 @@ http {
   } 
   server {
     server_name scurvy.*;
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name _;
+    include reverse-proxy.conf;
     location / {
       proxy_pass http://qbittorrent;
       proxy_set_header X-Scheme $scheme;
