--- a/charts/webserver/templates/nginx/cm.yml
+++ b/charts/webserver/templates/nginx/cm.yml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: nginx-conf
+  name: nginx-configs
 data:
   nginx.conf: |- 
 {{ .Files.Get "config/nginx/nginx.conf" | indent 4 }}
+  reverse-proxy.conf: |- 
+{{ .Files.Get "config/nginx/reverse-proxy.conf" | indent 4 }}
