--- a/charts/coms/Chart.yaml
+++ b/charts/coms/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: webserver
-description: Webserver & associated security
+name: common
+description: Communications related services
 type: application
 version: 0.1.0
 appVersion: "1.16.0"
