--- a/charts/media/Chart.yaml
+++ b/charts/media/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: common
-description: Common services used by multiple other stacks
+description: Media delivery services
 type: application
 version: 0.1.0
 appVersion: "1.16.0"
