--- a/charts/common/templates/nfs/pv.yml
+++ b/charts/common/templates/nfs/pv.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: 
+  name: bulk-nfs
 spec:
   capacity:
     storage: 1Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: bulk-nfs
   mountOptions:
     - hard
@@ -20,14 +20,14 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: 
+  name: cache-nfs
 spec:
   capacity:
     storage: 1Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: cache-nfs
   mountOptions:
     - hard
