Initial keycloak & reverse proxy

--- a/charts/webserver/config/nginx/nginx.conf
+++ b/charts/webserver/config/nginx/nginx.conf
@@ -12,11 +12,19 @@ http {
         index  index.html index.htm;
     }
   } 
+  # server {
+  #   server_name scurvy.*;
+  #   include reverse-proxy.conf;
+  #   location / {
+  #     proxy_pass http://qbittorrent;
+  #     proxy_set_header X-Scheme $scheme;
+  #   }
+  # }
   server {
-    server_name scurvy.*;
+    server_name auth.*;
     include reverse-proxy.conf;
     location / {
-      proxy_pass http://qbittorrent;
+      proxy_pass http://keycloak;
       proxy_set_header X-Scheme $scheme;
     }
   }
