--- a/charts/common/templates/postgres/depl.yml
+++ b/charts/common/templates/postgres/depl.yml
@@ -29,4 +29,4 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /var/lib/postgresql/data
-              subPath: postgres
+              subPath: application/postgres
