Redirect local connects, experiment with keycloak

--- a/charts/common/templates/keycloak/depl.yml
+++ b/charts/common/templates/keycloak/depl.yml
@@ -21,6 +21,7 @@ spec:
       containers:
         - name: keycloak
           image: quay.io/keycloak/keycloak
+          args: ["start-dev"] 
           ports:
             - containerPort: 8080
           env:
