--- a/charts/webserver/config/nginx/nginx.conf
+++ b/charts/webserver/config/nginx/nginx.conf
@@ -25,6 +25,10 @@ http {
     include reverse-proxy.conf;
     location / {
       proxy_pass http://keycloak;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $host;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      add_header X-Frame-Options "";
       proxy_set_header X-Scheme $scheme;
     }
   }
