--- a/charts/webserver/config/nginx/nginx.conf
+++ b/charts/webserver/config/nginx/nginx.conf
@@ -22,7 +22,7 @@ http {
   # }
   server {
     server_name auth.*;
-    include reverse-proxy.conf;
+    # include reverse-proxy.conf;
     location / {
       proxy_pass http://keycloak;
       proxy_set_header Host $host;
