--- a/charts/common/templates/keycloak/depl.yml
+++ b/charts/common/templates/keycloak/depl.yml
@@ -21,6 +21,7 @@ spec:
       containers:
         - name: keycloak
           image: jboss/keycloak:latest
+          # image: quay.io/keycloak/keycloak:latest
           # args: ['start-dev']
           ports:
             - containerPort: 8080
