--- a/charts/common/templates/ldap-user-manager/svc.yml
+++ b/charts/common/templates/ldap-user-manager/svc.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: keycloak
+  name: qbittorrent
 spec: 
   selector:
-    app: keycloak
-    app.kubernetes.io/name: keycloak
+    app: qbittorrent
+    app.kubernetes.io/name: qbittorrent
   ports:
     - protocol: TCP
       port: 80
