--- a/charts/webserver/config/nginx/nginx.conf
+++ b/charts/webserver/config/nginx/nginx.conf
@@ -12,14 +12,26 @@ http {
         index  index.html index.htm;
     }
   } 
-  # server {
-  #   server_name scurvy.*;
-  #   include reverse-proxy.conf;
-  #   location / {
-  #     proxy_pass http://qbittorrent;
-  #     proxy_set_header X-Scheme $scheme;
-  #   }
-  # }
+  server {
+    server_name scurvy.*;
+    include reverse-proxy.conf;
+
+    fastcgi_buffers  16 16k;
+    fastcgi_buffer_size  32k;
+
+    location / {
+      auth_request /oauth2/auth;
+      error_page 401 = /oauth2/start; 
+      auth_request_set $token  $upstream_http_x_auth_request_access_token;
+      proxy_set_header X-Access-Token $token;
+
+      proxy_pass http://qbittorrent;
+    }
+    location /oauth2 {
+      proxy_set_header X-Scheme $scheme;
+      proxy_pass http://oauth2-proxy;
+    }
+  }
   server {
     server_name auth.*;
     # include reverse-proxy.conf;
