--- a/charts/common/templates/ldap-user-manager/svc.yml
+++ b/charts/common/templates/ldap-user-manager/svc.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: qbittorrent
+  name: ldap-user-manager
 spec: 
   selector:
-    app: qbittorrent
-    app.kubernetes.io/name: qbittorrent
+    app: ldap-user-manager
+    app.kubernetes.io/name: ldap-user-manager
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: 80 
