--- a/charts/webserver/templates/nginx/cm.yaml
+++ b/charts/webserver/templates/nginx/cm.yaml
@@ -13,3 +13,4 @@ data:
   {{ $cleanedPath := regexReplaceAll "\\/" (trimPrefix "config/nginx/" $path ) "_" }}
   {{ $cleanedPath }}: {{ tpl ($.Files.Get $path) $ | quote }}
 {{- end }}
+  test: {{ include "yourFnName" . }}
