--- a/charts/webserver/config/nginx/nginx.conf
+++ b/charts/webserver/config/nginx/nginx.conf
@@ -1,15 +1,8 @@
 user nginx;
-worker_processes  1;
+worker_processes 1;
 events {
-  worker_connections  10240;
+  worker_connections 10240;
 }
 http {
-  server {
-      listen       80;
-      server_name  localhost;
-      location / {
-        root   /usr/share/nginx/html; #Change this line
-        index  index.html index.htm;
-    }
-  } 
-} 
+  include /etc/nginx/conf.d/*.conf;
+}
