--- a/charts/webserver/templates/authelia/svc.yaml
+++ b/charts/webserver/templates/authelia/svc.yaml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: authelia
 spec: 
-  type: NodePort
   selector:
-    app: nginx
+    app: authelia
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
-      nodePort: 30000
+      targetPort: 9091
