--- a/charts/webserver/config/nginx/conf.d/auth.conf
+++ b/charts/webserver/config/nginx/conf.d/auth.conf
@@ -3,12 +3,12 @@ server {
   server_name auth.*;
 
   location / {
-    include trusted-proxy.conf;
+    include authelia-proxy.conf;
     proxy_pass http://authelia;
   }
 
   location /api/verify {
-    include trusted-proxy.conf;
+    include authelia-proxy.conf;
     proxy_pass https://authelia;
   }
 }
