--- a/charts/webserver/config/nginx/conf.d/qbittorrent.conf
+++ b/charts/webserver/config/nginx/conf.d/qbittorrent.conf
@@ -5,8 +5,11 @@ server {
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
 
+  include authelia-location.conf;
   location / {
-    include protected.conf;
+    include authelia-proxy.conf;
+    include authelia-endpoint.conf;
+
     proxy_pass http://qbittorrent;
   }
 }
