Consolidate under single chart

--- a/config/nginx/conf.d/qbittorrent.conf
+++ b/config/nginx/conf.d/qbittorrent.conf
@@ -7,6 +7,8 @@ server {
 
   include authelia-location.conf;
   location / {
+    set $target_url http://scurvy.localhost;
+
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
