--- a/config/authelia/configuration.yaml
+++ b/config/authelia/configuration.yaml
@@ -20,12 +20,13 @@ authentication_backend:
   refresh_interval: 1m
 
   ldap:
+    skip_verify: true
     implementation: custom
     url: ldap://openldap
     timeout: 5s
     start_tls: false
     base_dn: dc=kwkaiser,dc=io
-    additional_users_dn: ou=users
+    additional_users_dn: ou=people
     users_filter: (&({username_attribute}={input})(objectClass=person))
     username_attribute: uid
     mail_attribute: mail
