--- a/templates/nginx/depl.yaml
+++ b/templates/nginx/depl.yaml
@@ -15,14 +15,14 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx
+          image: linuxserver/nginx
           ports:
             - containerPort: 80
           volumeMounts:
           {{- range $path, $content := .Files.Glob "config/nginx/**" }}
           {{- $cleanedPath := regexReplaceAll "\\/" (trimPrefix "config/nginx/" $path ) "_" }}
             - name: nginx-configs
-              mountPath: {{ printf "%s%s" "/etc/nginx/" (regexReplaceAll "_"  $cleanedPath "/") }} 
+              mountPath: {{ printf "%s%s" "/config/nginx/" (regexReplaceAll "_"  $cleanedPath "/") }} 
               subPath: {{ $cleanedPath }}
               readOnly: true
           {{- end }} 
