--- a/config/authelia/configuration.yaml
+++ b/config/authelia/configuration.yaml
@@ -1,7 +1,7 @@
 ---
 theme: dark
 jwt_secret: a_very_important_secret
-default_redirection_url: http://localhost
+default_redirection_url: http://google.com
 default_2fa_method: ""
 
 server:
@@ -20,10 +20,9 @@ authentication_backend:
   refresh_interval: 1m
 
   ldap:
-    skip_verify: true
     implementation: custom
     url: ldap://openldap
-    timeout: 5s
+    timeout: 30s
     start_tls: false
     base_dn: dc=kwkaiser,dc=io
     additional_users_dn: ou=people
@@ -84,6 +83,6 @@ regulation:
   ban_time: 5m
 
 notifier:
-  disable_startup_check: false
+  disable_startup_check: true
   filesystem:
     filename: /cnofig/notification.txt
