shoveling more garbage

--- a/templates/ldap-user-manager/depl.yaml
+++ b/templates/ldap-user-manager/depl.yaml
@@ -18,7 +18,6 @@ spec:
           image: wheelybird/ldap-user-manager
           ports:
             - containerPort: 80
-
           env:
             - name: NO_HTTPS
               value: "true"
@@ -36,3 +35,7 @@ spec:
               value: password
             - name: LDAP_IGNORE_CERT_ERRORS
               value: "true"
+      initContainers:
+        - name: init-ldap-user-manager
+          image: busybox
+          command: ['sh', '-c', "until nslookup openldap.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for openldap; sleep 2; done"]
