--- a/templates/authelia/depl.yaml
+++ b/templates/authelia/depl.yaml
@@ -24,9 +24,10 @@ spec:
                 subPath: configuration.yaml 
                 readOnly: false
       initContainers:
-        - name: init-authelia
-          image: busybox
-          command: ['sh', '-c', "until nslookup openldap.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for openldap; sleep 2; done"]
+      {{- range $name := list "openldap" }}
+        {{- $p := dict "Name" $name }}
+        {{ include "waitFor" $p}}
+      {{- end }} 
       volumes:
         - name: authelia-configs
           configMap:
