--- a/config/nginx/conf.d/default.conf
+++ b/config/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  localhost;
+    server_name  {{ .Values.domainName }};
     location / {
       root   /usr/share/nginx/html; #Change this line
       index  index.html index.htm;
