--- a/templates/nginx/svc.yaml
+++ b/templates/nginx/svc.yaml
@@ -8,6 +8,11 @@ spec:
     app: nginx
   ports:
     - protocol: TCP
+      port: 443 
+      targetPort: 443
+      nodePort: 30443
+
+    - protocol: TCP
       port: 80
       targetPort: 80
-      nodePort: 30000
+      nodePort: 30080
