--- a/templates/nginx/svc.yaml
+++ b/templates/nginx/svc.yaml
@@ -7,12 +7,14 @@ spec:
   selector:
     app: nginx
   ports:
-    - protocol: TCP
+    - name: https
+      protocol: TCP
       port: 443 
       targetPort: 443
       nodePort: 30443
 
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 80
       nodePort: 30080
