--- a/config/nginx/conf.d/qbittorrent.conf
+++ b/config/nginx/conf.d/qbittorrent.conf
@@ -1,6 +1,6 @@
 server {
   server_name scurvy.*;
-  include reverse-proxy.conf;
+  # include reverse-proxy.conf;
 
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
