--- a/config/nginx/https.conf
+++ b/config/nginx/https.conf
@@ -1,3 +1,5 @@
+listen 443 ssl;
+listen [::]:443 ssl;
 ssl_certificate keys/{{ .Values.domainName }}.crt;
 ssl_certificate_key keys/{{ .Values.domainName }}.key;
 
