--- a/config/nginx/conf.d/auth.conf
+++ b/config/nginx/conf.d/auth.conf
@@ -1,5 +1,5 @@
 server {
-  listen 80;
+  include https.conf;
   server_name auth.*;
 
   location / {
@@ -9,6 +9,6 @@ server {
 
   location /api/verify {
     include authelia-proxy.conf;
-    proxy_pass https://authelia;
+    proxy_pass http://authelia;
   }
 }
