--- a/config/nginx/conf.d/default.conf
+++ b/config/nginx/conf.d/default.conf
@@ -1,16 +1,16 @@
-server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
-	server_name _;
-	return 301 https://$host$request_uri;
-}
+# server {
+# 	listen 80 default_server;
+# 	listen [::]:80 default_server;
+# 	server_name _;
+# 	return 301 https://$host$request_uri;
+# }
 
 server {
-    include https.conf; 
-    server_name  {{ .Values.domainName }};
+  server_name _;
+  include https.conf;
 
-    location / {
-      root   /usr/share/nginx/html; #Change this line
-      index  index.html index.htm;
+  location / {
+    root /usr/share/nginx/html; #Change this line
+    index index.html index.htm;
   }
-} 
+}
