Fix incorrect routing

--- a/config/nginx/conf.d/default.conf
+++ b/config/nginx/conf.d/default.conf
@@ -1,13 +1,8 @@
-# server {
-# 	listen 80 default_server;
-# 	listen [::]:80 default_server;
-# 	server_name _;
-# 	return 301 https://$host$request_uri;
-# }
-
 server {
-  server_name _;
+  listen 443 ssl default_server;
   include https.conf;
+
+  server_name _;
 
   location / {
     root /usr/share/nginx/html; #Change this line
