--- a/config/nginx/conf.d/ldap-user-manager.conf
+++ b/config/nginx/conf.d/ldap-user-manager.conf
@@ -1,5 +1,9 @@
 server {
+  listen 443 ssl;
+  include https.conf;
+
   server_name users.*;
+
   location / {
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $host;
