--- a/config/authelia/configuration.yaml
+++ b/config/authelia/configuration.yaml
@@ -11,7 +11,7 @@ server:
   disable_healthcheck: false
 
 log:
-  level: debug
+  level: trace
   format: json
 
 authentication_backend:
@@ -26,12 +26,12 @@ authentication_backend:
     start_tls: false
     base_dn: dc=kwkaiser,dc=io
     additional_users_dn: ou=people
-    users_filter: (&({username_attribute}={input})(objectClass=person))
+    users_filter: ({username_attribute}={input})
     username_attribute: uid
     mail_attribute: mail
     display_name_attribute: displayName
     additional_groups_dn: ou=groups
-    groups_filter: (&(member={dn})(objectClass=groupOfNames))
+    groups_filter: (&(member={dn})(|(sAMAccountType=268435456)(sAMAccountType=536870912)))
     group_name_attribute: cn
     permit_referrals: false
     permit_unauthenticated_bind: false
@@ -70,7 +70,7 @@ storage:
     path: /config/db.sqlite3
 
 session:
-  domain: localhost
+  domain: { { .Values.domainName } }
   secret: insecure_session_secret
   name: authelia_session
   same_site: lax
@@ -85,4 +85,6 @@ regulation:
 notifier:
   disable_startup_check: true
   filesystem:
-    filename: /cnofig/notification.txt
+    filename: /config/notification.txt
+# http://authelia:9091/api/verify?rd=http://auth.b49.cloudserver.click
+# http://authelia:9091/api/verify?rd=https://auth.b49.cloudserver.click
