--- a/config/nginx/authelia-endpoint.conf
+++ b/config/nginx/authelia-endpoint.conf
@@ -6,7 +6,7 @@ auth_request /authelia;
 ## Comment this line if you're using nginx without the http_set_misc module.
 # set_escape_uri $target_url $scheme://$http_host$request_uri;
 ## Uncomment this line if you're using NGINX without the http_set_misc module.
-set $target_url $scheme://$http_host$request_uri;
+set $target_url https://$http_host$request_uri;
 ## Save the upstream response headers from Authelia to variables.
 auth_request_set $user $upstream_http_remote_user;
 auth_request_set $groups $upstream_http_remote_groups;
@@ -20,4 +20,4 @@ proxy_set_header Remote-Name $name;
 proxy_set_header Remote-Email $email;
 
 ## If the subreqest returns 200 pass to the backend, if the subrequest returns 401 redirect to the portal.
-error_page 401 =302 https://auth.{{ .Values.domainName }}/?rd=$target_url;
+error_page 401 =302 https://auth.{{.Values.domainName}}/?rd=$target_url;
