--- a/templates/piracy/svc.yaml
+++ b/templates/piracy/svc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: qbittorrent
+  name: piracy
 spec: 
   selector:
-    app: qbittorrent
-    app.kubernetes.io/name: qbittorrent
+    app: piracy
+    app.kubernetes.io/name: piracy
   ports:
     - protocol: TCP
-      port: 80
+      port: 8080
       targetPort: 8080
